# fibonacci_codec

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml
.circleci/: config.yml
.github/workflows/: ci.yml
benches/: fibonacci_codec.rs
generator/: Cargo.toml
generator/src/: main.rs
src/: decode.rs  encode.rs  int.rs  lib.rs  macros.rs  tables.rs
tests/: decode.rs  encode.rs  prop.rs
