[package]
name = "fibonacci_codec"
version = "0.1.2-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/fibonacci_codec"
readme = "README.md"
description = "Implementation of fibonacci coding for primitive integer types"
documentation = "https://docs.rs/fibonacci_codec"

[badges]
circle-ci = { repository = "antifuchs/fibonacci_codec", branch = "master" }
maintenance = { status = "passively-maintained" }

[[bench]]
name = "fibonacci_codec"
harness = false

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"

[package.metadata.template_ci.bench]
run = true
version = "stable"

[dependencies]
num = "0.2.0"
bit-vec = "0.6.0"
failure = "0.1.1"
failure_derive = "0.1.1"

[dev-dependencies]
proptest = "0.9.3"
criterion = "0.2"
