[package]
name = "fibonacci_codec"
version = "0.2.1-dev"
edition = "2018"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/fibonacci_codec"
readme = "README.md"
description = "Implementation of fibonacci coding for primitive integer types"
documentation = "https://docs.rs/fibonacci_codec"

[badges]
circle-ci = { repository = "antifuchs/fibonacci_codec", branch = "master" }
maintenance = { status = "passively-maintained" }

[[bench]]
name = "fibonacci_codec"
harness = false

[package.metadata.template_ci.bench]
run = true
version = "stable"

[dependencies]
num = "0.4"
bit-vec = "0.6.0"
failure = "0.1.1"
failure_derive = "0.1.1"

[build-dependencies]
num = "0.4"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3"
